# azeban

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  config.json  todo.txt
benchmarks/: CMakeLists.txt  benchmark_fft.cpp  micro_benchmarks.cpp  system_properties.cpp
benchmarks/azeban/: CMakeLists.txt  benchmark.hpp  fft.cpp  fft_3d.cpp  incompressible_euler.cpp
catalyst/: isosurface_curl.py  q_criterion.py  vorticity_magnitude.py
cmake/: FindFFTW3.cmake  FindNetCDF.cmake  fast_debug.cmake  has_build_type.cmake  warning_flags.cmake
experiments/: convergence_plot.py  plot_snapshot.py  plot_structure_functions.py
experiments/BrownianBridge2D/: brownian_bridge_N128_H0.15.json  brownian_bridge_N128_H0.5.json  brownian_bridge_N128_H0.75.json  brownian_bridge_N256_H0.15.json  brownian_bridge_N256_H0.5.json  brownian_bridge_N256_H0.75.json  brownian_bridge_N512_H0.15.json  brownian_bridge_N512_H0.5.json  brownian_bridge_N512_H0.75.json  plot.slurm  postprocess.slurm  simulation_N128_H0.15.slurm  simulation_N128_H0.5.slurm  simulation_N128_H0.75.slurm  simulation_N256_H0.15.slurm  simulation_N256_H0.5.slurm  simulation_N256_H0.75.slurm  simulation_N512_H0.15.slurm  simulation_N512_H0.5.slurm  simulation_N512_H0.75.slurm  structure_function.slurm  structure_function_T0.0.slurm  submit.sh
experiments/BrownianBridge3D/: brownian_bridge_N128_H0.15.json  brownian_bridge_N128_H0.5.json  brownian_bridge_N128_H0.75.json  brownian_bridge_N256_H0.75.json  brownian_bridge_N32_H0.15.json  brownian_bridge_N32_H0.5.json  brownian_bridge_N32_H0.75.json  brownian_bridge_N64_H0.15.json  brownian_bridge_N64_H0.5.json  brownian_bridge_N64_H0.75.json  postprocess.slurm  simulation_N128_H0.15.slurm  simulation_N128_H0.5.slurm  simulation_N128_H0.75.slurm  simulation_N256_H0.75.slurm  simulation_N32_H0.15.slurm  simulation_N32_H0.5.slurm  simulation_N32_H0.75.slurm  simulation_N64_H0.15.slurm  simulation_N64_H0.5.slurm  simulation_N64_H0.75.slurm  structure_function_N128.slurm  structure_function_N256.slurm  structure_function_N32_N64.slurm  structure_function_N64.slurm
experiments/DiscontinuousShearLayer/: discontinuous_shear_layer_N1024_rho0.1_delta0.025.json  discontinuous_shear_layer_N1024_rho0_delta0.025.json  plot.slurm  postprocess.slurm  submit.sh  (+15 more)
results/: .gitignore  energy_spectra.ipynb  mean_variance.ipynb  results.tex  structure_funciton.ipynb  structure_function.ipynb  wasserstein_convergence.ipynb
scripts/: alltoall_scheduling.py  call_azeban_from_python.py  fbm.py  generate_fbm_fourier.py  make_burgers_plots.py  make_euler_plots.py  plot_burgers.py  plot_fft_benchmark_results.py  plot_heat_test_results.py  plot_incompressible_euler.py  plot_profiling_results.py  plot_profiling_timeline.py  plot_scaling.py  profile_euler.py  run_scaling_daint.py  run_scaling_leonhard.py  structure_postprocess.py
src/: CMakeLists.txt  azeban.cpp  postprocess.cpp
src/azeban/: CMakeLists.txt  copy_padded.cpp  fft.cpp  profiler.cpp  run_from_config.cpp  simulation.cpp  simulation_factory.cpp  simulation_mpi_factory.cpp  some_source_file.cpp
src/azeban/cuda/: CMakeLists.txt  copy_padded_cuda.cu  cuda_check_error.cpp  some_kernel.cu
src/azeban/cuda/equations/: CMakeLists.txt  burgers_cuda.cu  incompressible_euler_cuda.cu  incompressible_euler_mpi_cuda.cu  incompressible_euler_naive_cuda.cu
src/azeban/cuda/forcing/: CMakeLists.txt  white_noise_cuda.cu  white_noise_high_freq_cuda.cu
src/azeban/cuda/operations/: CMakeLists.txt  axpby_cuda.cu  axpy_cuda.cu  clamp_cuda.cu  convolve.cu  copy_from_padded_cuda.cu  copy_padded_cuda.cu  copy_to_padded_cuda.cu  cufft.cpp  cufft_mpi.cpp  inverse_curl_cuda.cu  leray_cuda.cu  norm_cuda.cu  reduce_cuda.cu  scale_cuda.cu  structure_function.cu  transpose.cu
src/azeban/cuda/random/: CMakeLists.txt  curand_helpers.cu
src/azeban/equations/: CMakeLists.txt  equation_factory.cpp  equation_mpi_factory.cpp  incompressible_euler_mpi.cpp  incompressible_euler_mpi_naive.cpp
src/azeban/init/: CMakeLists.txt  brownian_motion.cpp  discontinuous_double_shear_layer.cpp  discontinuous_shear_tube.cpp  discontinuous_vortex_patch.cpp  double_shear_layer.cpp  init_3d_from_2d.cpp  init_from_file.cpp  python.cpp  shear_tube.cpp  shock.cpp  sine_1d.cpp  taylor_green.cpp  taylor_vortex.cpp
src/azeban/io/: CMakeLists.txt  absolute_longitudinal_structure_function_writer.cpp  absolute_longitudinal_structure_function_writer_factory.cpp  energy_spectrum_writer.cpp  energy_spectrum_writer_factory.cpp  enstrophy_spectrum_writer.cpp  enstrophy_spectrum_writer_factory.cpp  longitudinal_structure_function_writer.cpp  longitudinal_structure_function_writer_factory.cpp  netcdf_collective_snapshot_writer.cpp  netcdf_collective_snapshot_writer_factory.cpp  netcdf_energy_spectrum_writer.cpp  netcdf_enstrophy_spectrum_writer.cpp  netcdf_file.cpp  netcdf_file_factory.cpp  netcdf_sample_writer.cpp  netcdf_second_order_structure_function_writer.cpp  netcdf_snapshot_writer.cpp  netcdf_snapshot_writer_factory.cpp  netcdf_structure_function_cube_writer.cpp  netcdf_writer.cpp  paraview_catalyst_writer.cpp  paraview_catalyst_writer_factory.cpp  second_order_structure_function_writer.cpp  second_order_structure_function_writer_factory.cpp  snapshot_writer.cpp  structure_function_cube_writer.cpp  structure_function_cube_writer_factory.cpp  structure_function_writer.cpp  structure_function_writer_factory.cpp  third_order_structure_function_writer.cpp  third_order_structure_function_writer_factory.cpp  writer.cpp  writer_collection.cpp  writer_factory.cpp
src/azeban/memory/: CMakeLists.txt  workspace.cpp
src/azeban/mpi/: CMakeLists.txt  communicator.cpp  cuda_aware_communicator.cpp  manual_cuda_aware_communicator.cpp
src/azeban/operations/: CMakeLists.txt  copy_from_padded.cpp  copy_padded.cpp  copy_to_padded.cpp  energy_spectrum.cpp  enstrophy_spectrum.cpp  fft.cpp  fft_factory.cpp  fftwfft.cpp  inverse_curl.cpp  leray.cpp  second_order_structure_function.cpp  statistics_recorder.cpp  structure_function.cpp  transpose.cpp
test/: CMakeLists.txt  unit_tests.cpp
(+554 files in other folders)
